--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
+    "generate:typings": "ts-node scripts/generateTypings",
     "start:prod": "node dist/main",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "jest",
@@ -22,7 +23,7 @@
   "dependencies": {
     "@nestjs/common": "^6.7.2",
     "@nestjs/core": "^6.7.2",
-    "@nestjs/graphql": "^6.5.3",
+    "@nestjs/graphql": "6.6.2",
     "@nestjs/passport": "^6.1.1",
     "@nestjs/platform-express": "^6.7.2",
     "@nestjs/swagger": "^2.5.1",
@@ -30,23 +31,26 @@
     "@types/bcrypt": "^3.0.0",
     "@types/faker": "^4.1.9",
     "@types/passport-jwt": "^3.0.3",
-    "apollo-server-express": "^2.9.13",
+    "apollo-server-express": "2.13.0",
     "bcrypt": "^3.0.7",
+    "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
     "express-rate-limit": "^5.0.0",
     "faker": "^4.1.0",
-    "graphql": "^14.5.8",
+    "graphql": "14.6.0",
     "graphql-tools": "^4.0.6",
     "helmet": "^3.22.0",
     "joi": "^14.3.1",
+    "nestjs-typeorm-paginate": "^2.0.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^7.14.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3",
+    "type-graphql": "0.18.0-beta.17",
     "typeorm": "^0.2.21",
-    "typescript": "^3.7.3"
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.9.0",
